--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,9 +7,13 @@
   padding: 4rem 0;
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.main > div {
+  padding: 40px;
 }
 
 .footer {
